<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:padding="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".manual"
    tools:showIn="@layout/activity_manual">

    <TextView
        android:id="@+id/manual_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manual_settings"
        android:textColor="@color/text_color"
        android:textSize="30dp"/>


    <TextView
        android:id="@+id/instruction_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/time_instructions"
        android:textColor="@color/text_color"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/header_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/timer"
        android:textColor="@color/text_color"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/edit_text_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="Minutes"
        android:inputType="number"
        android:maxLength="2"
        android:textColorHint="@color/text_color"
        android:textColor="@color/text_color"/>

    <Button
        android:id="@+id/button_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Set"
        android:background="@color/text_color"/>

    <TextView
        android:id="@+id/instuction_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/power_instructions"
        android:textColor="@color/text_color"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/header_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/power"
        android:textColor="@color/text_color"
        android:textSize="25dp"/>

    <Spinner
        android:id="@+id/power_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/spinner_background"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="00:00"
        android:textColor="@color/text_color"
        android:textSize="35dp"
        android:visibility="invisible"
        android:layout_marginTop="-200dp"/>

    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enjoy your meal!"
        android:layout_gravity="center"
        android:textColor="@color/text_color"
        android:visibility="invisible"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/home_screen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Home"
        android:background="@color/text_color"
        android:textColor="@android:color/black"
        android:visibility="invisible"
        android:layout_marginTop="50dp"/>


</LinearLayout>